@@ -1,4 +1,4 @@
-.TH GPDASM 1 "27 octobre 2007" "gputils-0.13.6" "Manuel de l'utilisateur Linux"
+.TH GPDASM 1 "27 octobre 2007" "gputils-0.13.7" "Manuel de l'utilisateur Linux"
 .SH NOM
 gpdasm \- Désassembleur GNU pour PIC
 .SH SYNOPSIS
