@@ -1,4 +1,4 @@
-.TH GPSTRIP 1 "27 octobre 2007" "gputils-0.13.6" "Manuel de l'utilisateur Linux"
+.TH GPSTRIP 1 "27 octobre 2007" "gputils-0.13.7" "Manuel de l'utilisateur Linux"
 .SH NOM
 gpstrip \- Retirer les symboles d'un fichier objet
 .SH SYNOPSIS
