@@ -1,4 +1,4 @@
-.TH GPDASM 1 "2007-10-27" "gputils-0.13.6" "Linux user's manual"
+.TH GPDASM 1 "2007-10-27" "gputils-0.13.7" "Linux user's manual"
 .SH NAME
 gpdasm \- GNU PIC disassembler
 .SH SYNOPSIS
