@@ -1,4 +1,4 @@
-.TH GPSTRIP 1 "2007-10-27" "gputils-0.13.6" "Linux user's manual"
+.TH GPSTRIP 1 "2007-10-27" "gputils-0.13.7" "Linux user's manual"
 .SH NAME
 gpstrip \- discard symbols from object file
 .SH SYNOPSIS
