@@ -1,4 +1,7 @@
 2009-03-13  David Barnett  <daviebdawg@gmail.com>
+  * gputils-0.13.7 released
+
+2009-03-13  David Barnett  <daviebdawg@gmail.com>
   * Minor signed/unsigned cleanups from bug #2556391.
 
 2009-03-12  Marko Kohtala  <marko.kohtala@gmail.com>
